preventing x overflow

--- a/app/assets/stylesheets/font.css
+++ b/app/assets/stylesheets/font.css
@@ -3,6 +3,8 @@
 body {
   font-family: 'Droid Arabic Naskh', serif;
   padding-top: 40px;
+  overflow-x:hidden;
+
 }
 table.poems {
   white-space: pre;
@@ -107,3 +109,4 @@ div.profile-show-poems{
 dl.show-poems {
     white-space: pre;
 }
+
